fix: fix layout shift

--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -1,5 +1,6 @@
 .dropzone {
-  border: 1px dashed var(--stroke-default);
+  border: 2px dashed transparent;
+  outline: 1px dashed var(--stroke-default);
   border-radius: 0.5rem;
   display: grid;
   justify-items: center;
@@ -20,7 +21,8 @@
   color: var(--text-tertiary);
 }
 .dropzone:hover, .dropzone:has(input:focus) {
-  border: 2px dashed var(--stroke-highlight);
+  outline-width: 0;
+  border-color: var(--stroke-highlight);
   background-color: var(--surface-secondary);
 }
 .dropzone:hover svg path, .dropzone:has(input:focus) svg path {
